--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node test/main.js"
+    "test": "node test/main.js > test/log.out 2> test/log.err"
   },
   "repository": {
     "type": "git",
